fix MaainContents overflowing

--- a/src/Pages/HeroPage/ComponentsStyle/AbilitiesBox.css
+++ b/src/Pages/HeroPage/ComponentsStyle/AbilitiesBox.css
@@ -1,10 +1,12 @@
 .abilities-box-container{
     display: flex;
+    width: 100%;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 10px;
     justify-content: center;
     align-items: center;
-    border: solid 1px black;
+    border: solid 1px black;border-radius: 10px;
 }
 
 
