--- a/src/Pages/HeroPage/ComponentsStyle/MainContens.css
+++ b/src/Pages/HeroPage/ComponentsStyle/MainContens.css
@@ -1,18 +1,22 @@
 .main-contents-container{
     display: grid;
-    width: 100%; height:100%;
+    width: 100vw;
+    height:100%;
     overflow: auto;
     overflow-y: scroll;
+    overflow-x: unset;
     min-height: 0;
     min-width: 0;
     scrollbar-width: none;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 50px 300px;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto auto;
     grid-template-areas: "box-1 box-2 box-2 box-2 box-2"
-                         "box-4 box-2 box-2 box-2 box-2"
+                         "box-4 box-4 box-4 box-4 box-4"
                          "box-3 box-3 box-3 box-3 box-3";
-    gap : 2em;
-    padding:10px;
+    gap :1em;
+    box-sizing: border-box;
+    padding : 10px;
+
 }
 
 .main-contents-container::-webkit-scrollbar{
